--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Hero Section -->
     <section class="hero">
       <div class="hero-content">
-        <h2>Hi, I’m <span class="typing"></span></h2>
+        <h2>Hello, I'm <span class="typing"></span></h2>
         <p>Aspiring Software Engineer & Cybersecurity Student</p>
         <a href="#projects" class="btn">View My Work</a>
       </div>
