--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h3>Mind Note</h3>
         <p>Full-stack note-taking platform using Node.js, Express.js, MongoDB, and EJS.</p>
         <div class="project-links">
-          <a href="#" target="_blank">Live Website</a>
+          <a href="https://github.com/10Fawaz/NoteMind" target="_blank">Live Website</a>
         </div>
       </div>
 
@@ -76,7 +76,7 @@
         <h3>Birch Motors</h3>
         <p>Full-stack project to view cars and Book them for a day built with React.js, Node.js, Express.js, JWT, Insonmia, MongoDB, and Mongoose.</p>
         <div class="project-links">
-          <a href="#" target="_blank">Live Website</a>
+          <a href="https://github.com/10Fawaz/Birch-Motors-Rental-front-end" target="_blank">Live Website</a>
         </div>
       </div>
 
